# Kernel

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SUPPORT.md
avila-math/: Cargo.toml
avila-math/examples/: window_app.rs
avila-math/src/: quat.rs  vec3.rs
avila-math/src/memory/: mod.rs  pool.rs  stack.rs
avila-math/src/os/: clock.rs  filesystem.rs  mod.rs  network.rs
avila-math/src/window/: input.rs  mod.rs
avila-math/tests/: memory_tests.rs
avila-renderer/: Cargo.toml  README.md
avila-renderer/src/: lib.rs
avila-renderer/src/gfx/: api.rs  framegraph.rs  mod.rs
avila-renderer/src/gfx/backend/: mod.rs
examples/: window_app.rs
src/: aabb.rs  lib.rs  mat4.rs  vec4.rs
src/memory/: arena.rs  manager.rs
src/os/: threading.rs
src/window/: events.rs
tests/: memory_tests.rs
