[workspace]
resolver = "2"
members = ["avila-math", "avila-renderer"]

[workspace.package]
authors = ["Avila Contributors"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/avilaops/Kernel"
homepage = "https://github.com/avilaops/Kernel"

[workspace.dependencies]
# Shared dependencies across workspace
# avila-math = { path = "avila-math", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
